--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
             <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fexternal-preview.redd.it%2FG43lN3Rpp9jp_sBzsOzqzJz70TKI06rW38BMUu-hzZM.jpg%3Fauto%3Dwebp%26s%3D790957503a4cdd2fb5d00d3c72be74ff85413af9&f=1&nofb=1" class="d-block w-100" alt="...">
+                  <img src="" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2FKPrSroTxEPs%2Fmaxresdefault.jpg&f=1&nofb=1" class="d-block w-100" alt="...">
+                  <img src="" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpreview.redd.it%2Fuot83b8umky61.png%3Fauto%3Dwebp%26s%3D938e6627b22e82c049c150cff7080c95d356db48&f=1&nofb=1" class="d-block w-100" alt="...">
+                  <img src="" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="images/hah.jpeg" class="d-block w-100" alt="...">
+                  <img src="" class="d-block w-100" alt="...">
                 </div>
               </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
